ARM/ARM/shared-resources.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": { "commonSettings": { "type": "object" } },
    "resources": [
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "[parameters('commonSettings').constants.apiVersions.networkSecurityGroups]",
            "location": "[resourceGroup().location]",
            "name": "[parameters('commonSettings').vnet.subnet.servicefabric.nsgName]",
            "tags": { "displayName": "NetworkSecurityGroup servicefabric" },
            "properties": {
                "securityRules": [
                    {
                        "name": "servicefabric-http-in",
                        "properties": {
                            "priority": 103,
                            "description": "Allow TCP/80 Inbound",
                            "access": "Allow",
                            "direction": "Inbound",
                            "protocol": "Tcp",
                            "sourceAddressPrefix": "Internet",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "[parameters('commonSettings').vnet.subnet.servicefabric.address]",
                            "destinationPortRange": "80"
                        }
                    },
                    {
                        "name": "servicefabric-https-in",
                        "properties": {
                            "priority": 104,
                            "description": "Allow TCP/443 Inbound",
                            "access": "Allow",
                            "direction": "Inbound",
                            "protocol": "Tcp",
                            "sourceAddressPrefix": "Internet",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "[parameters('commonSettings').vnet.subnet.servicefabric.address]",
                            "destinationPortRange": "443"
                        }
                    },
                    {
                        "name": "block-everything",
                        "properties": {
                            "priority": 4096,
                            "description": "Block all inbound traffic",
                            "access": "Deny",
                            "direction": "Inbound",
                            "protocol": "*",
                            "sourceAddressPrefix": "*",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "[parameters('commonSettings').vnet.subnet.servicefabric.address]",
                            "destinationPortRange": "*"
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "[parameters('commonSettings').constants.apiVersions.virtualNetworks]",
            "location": "[resourceGroup().location]",
            "name": "[parameters('commonSettings').vnet.name]",
            "tags": { "displayName": "Virtual Network" },
            "dependsOn": [
                "[concat('Microsoft.Network/networkSecurityGroups/', parameters('commonSettings').vnet.subnet.servicefabric.nsgName)]"
            ],
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[parameters('commonSettings').vnet.address]"
                    ]
                },
                "subnets": [
                    {
                        "name": "[parameters('commonSettings').vnet.subnet.servicefabric.name]",
                        "properties": {
                            "addressPrefix": "[parameters('commonSettings').vnet.subnet.servicefabric.address]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('commonSettings').vnet.subnet.servicefabric.nsgName)]"
                            }
                        }
                    }
                ]
            }
        }
    ]
}
